tests/machine/x/cpp/group_by.error
/workspace/mochi/tests/machine/x/cpp/group_by.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:21: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::__cxx11::basic_string<char>’)
   70 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 |      std::__cxx11::basic_string<char>
      |                 std::any
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/string:48:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/string:51:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   mismatched types ‘const _CharT*’ and ‘std::any’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by.cpp:5:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:70:24: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
   70 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:84:65: error: ‘struct Stat’ has no member named ‘age’
   84 |                       std::vector<decltype(std::declval<Stat>().age)> __items;
      |                                                                 ^~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:84:65: error: ‘struct Stat’ has no member named ‘age’
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:84:69: error: template argument 1 is invalid
   84 |                       std::vector<decltype(std::declval<Stat>().age)> __items;
      |                                                                     ^
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:84:69: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:86:33: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   86 |                         __items.push_back(p.age);
      |                                 ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:86:45: error: ‘struct Stat’ has no member named ‘age’
   86 |                         __items.push_back(p.age);
      |                                             ^~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:83:56: error: no matching function for call to ‘__avg(int)’
   83 |           __struct4{g.key, ((int)g.items.size()), __avg(([&]() {
      |                                                   ~~~~~^~~~~~~~~
   84 |                       std::vector<decltype(std::declval<Stat>().age)> __items;
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   85 |                       for (auto p : g.items) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~          
   86 |                         __items.push_back(p.age);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~       
   87 |                       }
      |                       ~                                 
   88 |                       return __items;
      |                       ~~~~~~~~~~~~~~~                   
   89 |                     })())});
      |                     ~~~~~                               
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:43:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
   43 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:43:30: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:83:56: note:   mismatched types ‘const std::vector<T>’ and ‘int’
   83 |           __struct4{g.key, ((int)g.items.size()), __avg(([&]() {
      |                                                   ~~~~~^~~~~~~~~
   84 |                       std::vector<decltype(std::declval<Stat>().age)> __items;
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   85 |                       for (auto p : g.items) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~          
   86 |                         __items.push_back(p.age);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~       
   87 |                       }
      |                       ~                                 
   88 |                       return __items;
      |                       ~~~~~~~~~~~~~~~                   
   89 |                     })())});
      |                     ~~~~~                               
/workspace/mochi/tests/machine/x/cpp/group_by.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:92:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Stat>’ requested
   64 |   std::vector<Stat> stats = ([&]() {
      |                             ~~~~~~~~
   65 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   66 |     for (auto person : people) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   67 |       auto __key = person.city;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
   68 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
   69 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   70 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
   71 |           __g.items.push_back(Stat{person});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   72 |           __found = true;
      |           ~~~~~~~~~~~~~~~
   73 |           break;
      |           ~~~~~~
   74 |         }
      |         ~
   75 |       }
      |       ~
   76 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
   77 |         __groups.push_back(__struct3{__key, std::vector<Stat>{Stat{person}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   78 |       }
      |       ~
   79 |     }
      |     ~
   80 |     std::vector<__struct4> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   81 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   82 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
   83 |           __struct4{g.key, ((int)g.items.size()), __avg(([&]() {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   84 |                       std::vector<decltype(std::declval<Stat>().age)> __items;
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   85 |                       for (auto p : g.items) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~
   86 |                         __items.push_back(p.age);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~
   87 |                       }
      |                       ~
   88 |                       return __items;
      |                       ~~~~~~~~~~~~~~~
   89 |                     })())});
      |                     ~~~~~~~~
   90 |     }
      |     ~
   91 |     return __items;
      |     ~~~~~~~~~~~~~~~
   92 |   })();
      |   ~~^~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:96:22: error: ‘struct Stat’ has no member named ‘city’
   96 |       std::cout << s.city;
      |                      ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:100:22: error: ‘struct Stat’ has no member named ‘count’
  100 |       std::cout << s.count;
      |                      ^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by.cpp:104:22: error: ‘struct Stat’ has no member named ‘avg_age’
  104 |       std::cout << s.avg_age;
      |                      ^~~~~~~
